--- a/app/src/main/res/layout/activity_constraint_layout_test.xml
+++ b/app/src/main/res/layout/activity_constraint_layout_test.xml
@@ -24,7 +24,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:srcCompat="@drawable/captain" />
+        app:srcCompat="@drawable/marvel" />
 
     <TextView
         android:id="@+id/textView"
